マッチ機能の作成 (#50)
